# bookcovers

./: .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml  deploy.yml
backend/: .coverage  .dockerignore  Dockerfile  entrypoint.sh  launch.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_portfolio_asset_user_fk.py  c3d4e5f6a7b8_profile_avatar.py  c3f8a2b1d9e5_fix_model_schema_sync.py  dba435d9f009_initial_schema.py
backend/app/: cli.py  database.py  dependencies.py  main.py  seed.py
backend/app/middleware/: rbac.py
backend/app/models/: __init__.py  book_cover.py  collaboration.py  creative_brief.py  freelancer_profile.py  notes.py  orders.py  portfolio_asset.py  settings.py  taxonomy.py  user.py
backend/app/routers/admin/: concierge.py  covers.py  orders.py  settings.py  taxonomy.py  users.py
backend/app/routers/freelancer/: portfolio.py  profile.py
backend/app/routers/internal/: review.py  talent.py  work_samples.py
backend/app/routers/public/: covers.py  freelancers.py  taxonomy.py
backend/app/schemas/: book_cover.py  concierge.py  freelancer.py  internal.py  orders.py  review.py  taxonomy.py  user.py
backend/app/services/: auth.py  moderation.py  search.py
backend/tests/: conftest.py  test_admin_taxonomy.py  test_admin_users.py  test_auth.py  test_freelancer_profile.py  test_portfolio.py  test_profile_slug.py  test_review_workflow.py
docs/: functional-spec.md  implementation-plan.md  style-guide.md
frontend/: eslint.config.js  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  main.tsx
infra/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infra/cdk.out/: CoversAppStack.assets.json  CoversAppStack.metadata.json  CoversAppStack.template.json  CoversDataStack.assets.json  CoversDataStack.metadata.json  CoversDataStack.template.json  manifest.json  tree.json  (+3 more)
(+97 files in other folders)
